--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages-d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass src/assets/Sass:src/assets/Css --watch --no-source-map",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "sass": "sass src/assets/Sass:src/assets/Css --watch --no-source-map"
   },
   "eslintConfig": {
     "extends": [
