--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notifications-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://salma247.github.io/notification-page",
+  "homepage": "http://salma247.github.io/notifications-page",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
