--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://salma247.github.io/notifications-page",
+  "homepage": "http://salma247.github.io/notifications-page/",
   "name": "notifications-page",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +10,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
